getWashInReasons
